--- a/index.html
+++ b/index.html
@@ -1150,7 +1150,7 @@
                 <h4>Contact Info</h4>
                 <p>Email: contact@gemilerenterprises.com</p>
                 <p>Phone: +1-555-123-4567</p>
-                <p>Address: 123 Entertainment Ave, City, Country</p>
+                <p>Address: UNIT-A,8/F KWUN TONG INDUSTRIAL CENTRE PHASE-3,448-458 KWUN TONG ROAD, KOWLOON, HONG KONG</p>
             </div>
             <div class="footer-column">
                 <h4>Quick Links</h4>
