--- a/index.html
+++ b/index.html
@@ -615,7 +615,7 @@
             border-top: 1px solid rgba(255, 255, 255, 0);
             padding-top: 1.25rem;
             font-size: 0.875rem;
-            color: #ccc;
+            color: #838080;
         }
 
         /* Responsive Design */
@@ -934,8 +934,7 @@
             <div class="footer-column">
                 <h4>Contact Info</h4>
                 <p>Email: contact@gemilerenterprises.com</p>
-                <p>Phone: +1-555-123-4567</p>
-                <p>Address: 123 Entertainment Ave, City, Country</p>
+                <p>Address: Unit-A, 8/F, Kwun Tong Industrial Center Phase-3, 448-458 Kwun Tong Road Kowloon, Hong Kong</p>
             </div>
             <div class="footer-column">
                 <h4>Quick Links</h4>
